--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><script src="https://kit.fontawesome.com/49b5d89c03.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/49b5d89c03.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Honda-cbr</title>
@@ -105,7 +106,7 @@
                             <img class="img-fluid rounded mx-auto d-blocks"src="images/bike-2.png" alt="">
                         </div>
                         <div class="mx-3">
-                            <h4>Motorcycles & Scooters</h4>
+                            <h4>Motorcycles and Scooters</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                             <div style="border: 1px solid red;" class="btn btn-white text-danger mb-2">Read More</div>
                         </div>
